# open-nv

./: .drone.yml  .gitignore  .gitmodules  CMakeLists.txt  Makefile  config  valgrind_declutter.supp
src/: .clang-format  CMakeLists.txt  Makefile  README.md  cellblock.cpp  cellblock.hpp  children.cpp  children.hpp  engine.cpp  engine.hpp  gamedata.cpp  gamedata.hpp  gameworld.cpp  gameworld.hpp  main.cpp  openNV.c  openNV.cpp  test_config.sh
src/alloc/: pool.hpp  pool.hpp.gch
src/bsa/: bsa.cpp  bsa.hpp  hash.cpp  hash.hpp
src/c/: openNV.c
src/c/esm/: esm.h  groups.h  records.c  records.h  subrecords.c  subrecords.h
src/c/util/: byte_hash.c  byte_hash.h  container.c  memutils.h  reference.h
src/cpp/: gamedata.cpp  gamedata.hpp  gameworld.cpp  gameworld.hpp  openNV.cpp
src/cpp/esm/: armo.cpp  aspc.hpp  clas.cpp  clas.hpp  ench.cpp  ench.hpp  esm.cpp  esm.hpp  eyes.cpp  eyes.hpp  fact.cpp  fact.hpp  glob.cpp  glob.hpp  gmst.cpp  gmst.hpp  group.hpp  hair.cpp  hair.hpp  hdpt.cpp  hdpt.hpp  headers.cpp  headers.hpp  ltex.cpp  ltex.hpp  mgef.cpp  mgef.hpp  micn.cpp  micn.hpp  race.cpp  race.hpp  reader.cpp  reader.hpp  record.cpp  record.hpp  records.hpp  scpt.hpp  sound.hpp  spel.cpp  structs.cpp  (+11 more)
src/cpp/logc/: log.cpp  log.h
src/cpp/util/: logger.cpp  logger.hpp
src/decoder/: audio.cpp  audio.hpp  av_utils.cpp  av_utils.hpp  constants.hpp  structs.hpp  video.cpp  video.hpp  video_audio.cpp  video_audio.hpp
src/engine/: audio.cpp  audio.hpp  playtest.cpp  video.cpp  video.hpp  videotest.cpp
src/error/: error.hpp
src/esm/: achr.cpp  achr.hpp  acre.cpp  acre.hpp  acti.cpp  acti.hpp  addn.cpp  addn.hpp  alch.cpp  alch.hpp  aloc.cpp  aloc.hpp  amef.cpp  amef.hpp  ammo.cpp  ammo.hpp  anio.cpp  anio.hpp  arma.cpp  arma.hpp  armo.cpp  armo.hpp  aspc.cpp  aspc.hpp  avif.cpp  avif.hpp  book.cpp  book.hpp  bptd.cpp  bptd.hpp  cams.cpp  cams.hpp  ccrd.cpp  ccrd.hpp  cdck.cpp  cdck.hpp  cell.cpp  cell.hpp  chal.cpp  chal.hpp  (+192 more)
src/esm/subrecords/: armor_common.cpp  armor_common.hpp  condition.cpp  condition.hpp  decal_data.hpp  destructiondata.cpp  destructiondata.hpp  effect.cpp  effect.hpp  equipment_type.hpp  fact_race_relation.hpp  instance_record_common.cpp  instance_record_common.hpp  item_common.hpp  leveled_common.hpp  material_common.hpp  modeldata.cpp  modeldata.hpp  npc_common.cpp  npc_common.hpp  objectbounds.cpp  objectbounds.hpp  patroldata.cpp  patroldata.hpp  scriptdata.cpp  scriptdata.hpp  services_common.hpp  skill_common.hpp  sound_common.hpp
src/file/: config_tester.cpp  configuration.cpp  configuration.hpp  configuration_manager.cpp  configuration_manager.hpp  reader.cpp  reader.hpp
src/file/test/: test_configuration.cpp  test_configuration_manager.cpp  test_configuration_manager_data.txt
src/game/: fnv.cpp  game.hpp  rendermanager.cpp  rendermanager.hpp  state.hpp  statemanager.hpp  videostate.cpp  videostate.hpp
src/game/fnv/: constants.hpp  fnv.cpp  fnv.hpp
src/math/: constants.hpp  mat2.hpp  mat3.hpp  mat4.hpp  mathgen.py  matutil.hpp  quat.hpp  types.hpp  util.hpp  vec2.hpp  vec3.hpp  vec4.hpp
src/nif/: nifactory.cpp  nifactory.hpp  nifdata.cpp  nifdata.hpp  nifpointer.cpp  nifpointer.hpp  nifreader.cpp  nifreader.hpp  niftester.cpp
src/nif/generator/: bitfields.py  compounds.py  enums.py  expression.py  factory.py  field_types.py  generator_context.py  name_utils.py  nif.xml  nifdoc.py  nv_extractor.py  objects.py  replace_tokens.py  token_replace.py  typedefs.py  version.py
src/nif/main/: AbstractAdditionalGeometryData.cpp  AbstractAdditionalGeometryData.hpp  BSBound.cpp  BSBound.hpp  BSDismemberSkinInstance.cpp  BSDismemberSkinInstance.hpp  BSFadeNode.cpp  BSFadeNode.hpp  BSShaderLightingProperty.cpp  BSShaderLightingProperty.hpp  BSShaderPPLightingProperty.cpp  BSShaderPPLightingProperty.hpp  BSShaderProperty.cpp  BSShaderProperty.hpp  BSShaderTextureSet.cpp  BSShaderTextureSet.hpp  BSXFlags.cpp  BSXFlags.hpp  NiAVObject.cpp  NiAVObject.hpp  NiAlphaProperty.cpp  NiAlphaProperty.hpp  NiCollisionObject.cpp  NiCollisionObject.hpp  NiDynamicEffect.cpp  NiDynamicEffect.hpp  NiExtraData.cpp  NiExtraData.hpp  NiFloatExtraData.cpp  NiFloatExtraData.hpp  NiFloatsExtraData.cpp  NiFloatsExtraData.hpp  NiGeometry.cpp  NiGeometry.hpp  NiGeometryData.cpp  NiGeometryData.hpp  NiIntegerExtraData.cpp  NiIntegerExtraData.hpp  NiMaterialProperty.cpp  NiMaterialProperty.hpp  (+41 more)
src/nif/scenegraph/: mesh.hpp  node.hpp  renderer.hpp
src/nif/shrot/: gl_tester.cpp
src/parse/: data_file.cpp  data_file.hpp  esm.hpp  records.hpp  subrecords.hpp
src/providers/: fileprovider.cpp  fileprovider.hpp
src/render/: renderer.hpp
src/render/opengl/: gl_renderer.cpp  gl_renderer.hpp
src/resources/: handle_resource.hpp  meshTester.cpp  mesh_manager.cpp  mesh_manager.hpp  resource.cpp  resource.hpp  resource_cache.cpp  resource_cache.hpp  shader.cpp  shader.hpp  texture2D.cpp  texture2D.hpp  textureTester.cpp  texture_manager.cpp  texture_manager.hpp
src/scene_graph/: node.hpp
src/script/: compile.cpp  compile.hpp  context.cpp  context.hpp  expr.cpp  expr.hpp  function.hpp  functions.cpp  interpreter.hpp  misc.hpp  node.cpp  node.hpp  opcode.hpp  parser.cpp  parser.hpp  statement.cpp  statement.hpp  tmp.txt  tokenizer.cpp  tokenizer.hpp  toktest  toktest.cpp  vm.cpp  vm.hpp
src/script/testscripts/: 1.txt
src/script/types/: base.hpp  float.cpp  float.hpp  integer.cpp  (+7 more)
src/streams/: iostream.hpp  istream.cpp  istream.hpp  ostream.cpp  ostream.hpp  utils.hpp
src/tests/: Makefile  bsatest.cpp  cameratest.cpp  compiletest.cpp  hashtabletest.c  parsetest.cpp
src/types/: conversion.cpp  conversion.hpp  errorpair.hpp
src/util/: byte_hash.c  byte_hash.h  bytestream.hpp  camera.hpp  compress.cpp  compress.hpp  container.h  enumflags.hpp  handle.hpp  handle_container.hpp  hashtable.c  hashtable.h  memutils.h  octet_hash.cpp  octet_hash.hpp  reference.h  ringbuffer.hpp  shader.hpp  stb_ds.h  stringutils.cpp  stringutils.hpp  strmanip.cpp  strmanip.hpp  thread.cpp  thread.hpp  timer.hpp
src/window/: events.hpp  glfw.cpp  glfw.hpp  types.hpp  windowing.hpp
(+39 files in other folders)
